--- a/nniasheet1.ipynb
+++ b/nniasheet1.ipynb
@@ -429,10 +429,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- *As we did a little research about the training and testing data, we saw that sklearn.datasets.make_regression method generates data randomly at each time.*\n",
-    "- *(put your answers here)*\n",
-    "- *(put your answers here)*\n",
-    "- *(put your answers here)*\n",
+    "- *As we did a little research about the training and testing data, we saw that sklearn.datasets.make_regression method generates data randomly at each time so the linear regression model using grid_search  would have different  results.
+*\n",
+    "- *The obtained fit maybe is not good enough because there maybe smaller loss using other intercept and slope that is not existing in the grid_search. 
+*\n",
+    "- *Disadvantages of the grid search approach: one the one hand, grid search is a parameter sweep, which is simply an exhaustive searching through a manually specified subset of the hyper parameter space. Since the parameter space may include real-valued or unbounded value spaces for certain parameters, manually set bounds and discretization may be necessary before applying grid search. On the other hand, grid search may suffer from the curse of dimensionality.
+*\n",
+    "- *Better ways of fitting a linear model : Cross-validation: hold out part of the available data (training data) as a test set X_test, y_test.Random Search: when the training data are too much we sacrifice the precision to sample parameters from a random distribution (i.e. uniform) for a fixed number of iterations.Gradient descent:To find a local minimum of a function using gradient descent, one takes steps proportional to the negative of the gradient (or of the approximate gradient) of the function at the current point.\n",
     "\n",
     "\n"
    ]
