delete the old version

--- a/nniaassignment3final.ipynb
+++ b/nniaassignment3final.ipynb
@@ -41,14 +41,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$1$. Name these numerical issues and explain them. ($1$ points)"
+    "$1$. Name these numerical issues and explain them. ($1$ points)\n",
+    "\n",
+    "Numerical issues might happen when we are dealing with too small or too big numbers since we need to represent infinitely many real numbers with a finite number of bit patterns.\n",
+    "One issue is underflow; it occurs when numbers near zero are rounded to zero.\n",
+    "The other one is overflow; it occurs when numbers with large magnitude are approximated as ∞ or −∞."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$2$. Suggest a remedy (with explanation on why it works) to overcome these numerical issues occuring with Softmax computation. Prove that this remedy actually does not change the softmax criteria. Describe a situation where the proposed remedy still fails to remove instability. ($1$ point)"
+    "$2$. Suggest a remedy (with explanation on why it works) to overcome these numerical issues occuring with Softmax computation. Prove that this remedy actually does not change the softmax criteria. Describe a situation where the proposed remedy still fails to remove instability. ($1$ point)\n",
+    "\n",
+    "These difficulties can be resolved by instead evaluating $softmax(z)$ where $z = x − max_ix_i$."
    ]
   },
   {
