the first question is done

--- a/nniaassignment3final.ipynb
+++ b/nniaassignment3final.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Numerical issues might happen when we are dealing with too small or too big numbers since we need to represent infinitely many real numbers with a finite number of bit patterns.\n",
     "One issue is underflow; it occurs when numbers near zero are rounded to zero.\n",
-    "The other one is overflow; it occurs when numbers with large magnitude are approximated as ∞ or −∞."
+    "The other one is overflow; it occurs when numbers with large magnitude are approximated as $\\infty$ or $-\\infty$."
    ]
   },
   {
@@ -54,7 +54,9 @@
    "source": [
     "$2$. Suggest a remedy (with explanation on why it works) to overcome these numerical issues occuring with Softmax computation. Prove that this remedy actually does not change the softmax criteria. Describe a situation where the proposed remedy still fails to remove instability. ($1$ point)\n",
     "\n",
-    "These difficulties can be resolved by instead evaluating $softmax(z)$ where $z = x − max_ix_i$."
+    "These difficulties can be resolved by instead evaluating $softmax(z)$ where $ z = x - max_ix_i$. Since we only add or subtract a scalar from the input vector, the result is not effected.\n",
+    "\n",
+    "However the error still can occur if we implement log softmax(x) by first running the softmax subroutine then passing the result to the log function, we could erroneously obtain $-\\infty$."
    ]
   },
   {
@@ -66,27 +68,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 10 15 20 25 30 35 40 45 50 55]\n",
+      "[  1.29082491e-24   1.91575403e-22   2.84323108e-20   4.21972907e-18\n",
+      "   6.26263322e-16   9.29457180e-14   1.37943676e-11   2.04726568e-09\n",
+      "   3.03841167e-07   4.50940274e-05   6.69254707e-03   9.93262053e-01]\n",
+      "[  1.29082491e-24   1.91575403e-22   2.84323108e-20   4.21972907e-18\n",
+      "   6.26263322e-16   9.29457180e-14   1.37943676e-11   2.04726568e-09\n",
+      "   3.03841167e-07   4.50940274e-05   6.69254707e-03   9.93262053e-01]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
     "# TODO : Define inputs\n",
+    "inputs = np.arange(0,60,5)\n",
+    "print (inputs)\n",
     "\n",
     "def softmax_naive(inputs):\n",
-    "    \"\"\"Unstable Softmax function\"\"\"\n",
-    "    \n",
-    "    # TODO : Implement\n",
-    "    pass\n",
+    "    exp_array = np.exp(inputs)\n",
+    "    return (exp_array/(np.sum(exp_array)))\n",
     "\n",
     "def softmax_modified(inputs):\n",
-    "    \"\"\"Stable Softmax function\"\"\"\n",
-    "    \n",
-    "    # TODO : Implement\n",
-    "    pass\n"
+    "    z = inputs - np.amax(inputs) \n",
+    "    exp_array = np.exp(z)\n",
+    "    return (exp_array/(np.sum(exp_array)))\n",
+    "\n",
+    "print (softmax_naive(inputs))\n",
+    "print (softmax_modified(inputs))"
    ]
   },
   {
