--- a/nniaassignment3final.ipynb
+++ b/nniaassignment3final.ipynb
@@ -9,9 +9,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Set notebook to full width\n",
     "from IPython.core.display import display, HTML\n",
@@ -233,14 +246,28 @@
    "source": [
     "**Suppose $f(x) = 2x^3 - 5x + 6$ **\n",
     "\n",
-    "$6$. Write down the mathematical expressions for minimizing f(x) using Gradient descent(GD) and then using Newton's Method(NM). ($1$ points)"
+    "$6$. Write down the mathematical expressions for minimizing f(x) using Gradient descent(GD) and then using Newton's Method(NM). ($1$ points)\n",
+    "\n",
+    "- Gradient descent : $x' = x - \\epsilon \\nabla_x f(x)$ where $x'$ is the updated point, $\\nabla_x f(x)$ is the gradient of $f$ and $\\epsilon$ is the learning rate, a positive scalar determining the size of the step.\n",
+    "    For the above function $\\nabla_x f(x) = 6x^2 - 5$ therefore $x' = x - \\epsilon (6x^2 - 5)$.\n",
+    "- Newton's Method : $x' = x - H(f)(x)^{-1} \\nabla_x f(x)$ where $ H(f)(x) $ Hessian matrix of $f$. \n",
+    "    Since we have only one variable in the function the Hessian is $ H(f)(x) = f''(x) $ therefore $x' = x - (12x)^{-1} (6x^2 -5)$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$7$. Report the updated values of x, both for GD and NM, at $x = 0$. what do you observe? ($1$ points)"
+    "$7$. Report the updated values of x, both for GD and NM, at $x = 0$. what do you observe? ($1$ points)\n",
+    "\n",
+    "- GD: $\\nabla_x f(x) = 6x^2 - 5$ at $x = 0$;  $\\nabla_x f(0) = - 5$ \n",
+    "\n",
+    "    $x' = 0 - \\epsilon \\nabla_x f(0)$ therefore the updated value $x' = 5\\epsilon $\n",
+    "    assuming $\\epsilon = 0.01 $ then we have $x' = 0.05$\n",
+    "    \n",
+    "- NM: $ H(f)(x)_{i,j} = \\frac{\\partial^2} {\\partial x_i \\partial x_j} \\rightarrow  H(f)(x) = [12x] $ \n",
+    "     \n",
+    "    $x' = x - (12x)^{-1} (6x^2 -5)$ for $x = 0$ we have $x' = 0$"
    ]
   },
   {
@@ -252,29 +279,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "sess = tf.Session()\n",
     "\n",
+    "x = tf.placeholder(tf.float32)\n",
+    "fx = 2*x**3 - 5*x + 6\n",
+    "dfx = tf.gradients(fx, x)[0]\n",
+    "eps = 0.01\n",
+    "x_upd = x - eps*dfx\n",
+    "x_upd_out = sess.run(x_upd, feed_dict = {x: 0.0})\n",
+    "\n",
+    "print (x_upd_out)\n",
     "# TODO : Implement Gradient Descent with Tensorflow"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inf\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
+    "sess = tf.Session()\n",
     "\n",
+    "x = tf.placeholder(tf.float32)\n",
+    "fx = 2*x**3 - 5*x + 6\n",
+    "dfx = tf.gradients(fx, x)[0]\n",
+    "ddfx = tf.gradients(dfx, x)[0]\n",
+    "x_upd = x - dfx*(ddfx)**(-1)\n",
+    "x_upd_out = sess.run(x_upd, feed_dict = {x: 0.0})\n",
+    "\n",
+    "print (x_upd_out)\n",
     "# TODO : Implement Newton's Method with Tensorflow"
    ]
   },
