visualization problem a bit done

--- a/nniaassignment3final.ipynb
+++ b/nniaassignment3final.ipynb
@@ -367,11 +367,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.2 36.1052631579\n"
+     ]
+    }
+   ],
    "source": [
     "# Import libraries\n",
     "import numpy as np\n",
@@ -380,7 +386,7 @@
     "# Generate the true data which is to be fitted\n",
     "m = 20                      # number of data points for x\n",
     "theta_true = 0.5            # corresponds to the true slope\n",
-    "x = np.linspace(-1,1,m)     # x values or inputs\n",
+    "x = np.linspace(-1,1,m)     # x values or inputsm\n",
     "y = theta_true * x          # True response\n",
     "\n",
     "\n",
@@ -391,22 +397,30 @@
     "\n",
     "# TODO : Create the subplot window\n",
     "\n",
+    "plt.figure(1)\n",
+    "plt.subplot(211)\n",
+    "plt.title(\"True data\")\n",
+    "plt.plot(x,y)\n",
+    "\n",
     "def hypothesis(x, theta):\n",
     "    \"\"\"Our \"hypothesis or predictive model\", a straight line through the origin.\"\"\"\n",
-    "    \n",
-    "    # TODO : Implement\n",
-    "    pass\n",
+    "    return x*theta\n",
     "\n",
     "def cost_func(theta):\n",
     "    \"\"\"The cost function describing the goodness of fit.\"\"\"  \n",
-    "    \n",
-    "    # TODO : Implement\n",
-    "    pass\n",
+    "    y_hypo = hypothesis(x, theta)\n",
+    "    return (1/2*m)* np.sum((y_hypo-y)**2)\n",
+    "\n",
     "\n",
     "\n",
     "# First construct a grid of theta parameter and their corresponding\n",
     "# cost function values.\n",
     "theta_grid = np.linspace(-0.2,1,50)\n",
+    "\n",
+    "cost_values = [cost_func(i) for i in theta_grid]\n",
+    "J_grid = np.matrix([theta_grid, cost_values])\n",
+    "\n",
+    "print (J_grid[0,0], J_grid[1,0])\n",
     "# Find the cost function values to be stored in J_grid\n",
     "# TODO : Create J_grid\n",
     "\n",
