some implementation part is done

--- a/nniasheet4.ipynb
+++ b/nniasheet4.ipynb
@@ -138,9 +138,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+      "0            7.0              0.27         0.36            20.7      0.045   \n",
+      "1            6.3              0.30         0.34             1.6      0.049   \n",
+      "2            8.1              0.28         0.40             6.9      0.050   \n",
+      "3            7.2              0.23         0.32             8.5      0.058   \n",
+      "4            7.2              0.23         0.32             8.5      0.058   \n",
+      "\n",
+      "   free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+      "0                 45.0                 170.0   1.0010  3.00       0.45   \n",
+      "1                 14.0                 132.0   0.9940  3.30       0.49   \n",
+      "2                 30.0                  97.0   0.9951  3.26       0.44   \n",
+      "3                 47.0                 186.0   0.9956  3.19       0.40   \n",
+      "4                 47.0                 186.0   0.9956  3.19       0.40   \n",
+      "\n",
+      "   alcohol  quality  \n",
+      "0      8.8        6  \n",
+      "1      9.5        6  \n",
+      "2     10.1        6  \n",
+      "3      9.9        6  \n",
+      "4      9.9        6  \n",
+      "(4898, 12)\n",
+      "[[  7.     0.27   0.36 ...,   0.45   8.8    6.  ]\n",
+      " [  6.3    0.3    0.34 ...,   0.49   9.5    6.  ]\n",
+      " [  8.1    0.28   0.4  ...,   0.44  10.1    6.  ]\n",
+      " ..., \n",
+      " [  6.5    0.24   0.19 ...,   0.46   9.4    6.  ]\n",
+      " [  5.5    0.29   0.3  ...,   0.38  12.8    7.  ]\n",
+      " [  6.     0.21   0.38 ...,   0.32  11.8    6.  ]]\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "import itertools\n",
@@ -153,11 +188,13 @@
     "data = pd.read_csv(data_url, sep=';')\n",
     "\n",
     "# inspect data\n",
-    "#print(data.head())\n",
-    "#print(data.shape)\n",
+    "print(data.head())\n",
+    "print(data.shape)\n",
     "\n",
     "# data as np array\n",
-    "# data_npr = data.values"
+    "#data_npr = data.values\n",
+    "\n",
+    "print(data_npr)"
    ]
   },
   {
@@ -180,7 +217,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a) Derive the gradient (w.r.t $\\textbf{w}$) for the regularized loss function given in **3**. (1.0 point)"
+    "a) Derive the gradient (w.r.t $\\textbf{w}$) for the regularized loss function given in **3**. (1.0 point)\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "    J(\\textbf{w}) = \\frac{1}{2m} ({X\\textbf{w}-\\textbf{y}})^{T}({X\\textbf{w}-\\textbf{y}}) + \\frac{\\lambda}{2m}\\sum_{j=1}^{n}{\\textbf{w}_j}^{2}\n",
+    "\\end{equation*}\n",
+    "\\begin{equation*}\n",
+    "\\nabla_wJ(\\textbf{w}) = X^T({X\\textbf{w}-\\textbf{y}})+ \\lambda\\textbf{w}\n",
+    "\\end{equation*}"
    ]
   },
   {
@@ -194,7 +238,8 @@
     "\n",
     "where $X^{2}$ is the element-wise squaring of the original design matrix $X$, $\\textbf{w}_1$ and $\\textbf{w}_2$ are the *weight* vectors, and **b** is the *bias* vector.\n",
     "\n",
-    "a) Now, please write down the matrix format for a $9^{th}$ order linear regression model (0.5 points)"
+    "a) Now, please write down the matrix format for a $9^{th}$ order linear regression model (0.5 points)\n",
+    "$$\\hat{\\textbf{y}} =\\textbf{b} + \\sum_{i=1}^{9} w_{i}x^{i} $$"
    ]
   },
   {
@@ -245,26 +290,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+      "0       0.307692          0.186275     0.216867        0.308282   0.106825   \n",
+      "1       0.240385          0.215686     0.204819        0.015337   0.118694   \n",
+      "2       0.413462          0.196078     0.240964        0.096626   0.121662   \n",
+      "3       0.326923          0.147059     0.192771        0.121166   0.145401   \n",
+      "4       0.326923          0.147059     0.192771        0.121166   0.145401   \n",
+      "\n",
+      "   free sulfur dioxide  total sulfur dioxide   density        pH  sulphates  \\\n",
+      "0             0.149826              0.373550  0.267785  0.254545   0.267442   \n",
+      "1             0.041812              0.285383  0.132832  0.527273   0.313953   \n",
+      "2             0.097561              0.204176  0.154039  0.490909   0.255814   \n",
+      "3             0.156794              0.410673  0.163678  0.427273   0.209302   \n",
+      "4             0.156794              0.410673  0.163678  0.427273   0.209302   \n",
+      "\n",
+      "    alcohol  quality  \n",
+      "0  0.129032      0.5  \n",
+      "1  0.241935      0.5  \n",
+      "2  0.338710      0.5  \n",
+      "3  0.306452      0.5  \n",
+      "4  0.306452      0.5  \n"
+     ]
+    }
+   ],
    "source": [
     "def data_normalization(data):\n",
     "    # TODO: implement\n",
-    "    data_normalized = None\n",
+    "    newDF = pd.DataFrame() #creates a new dataframe that's empty\n",
+    "    for column in data:\n",
+    "        min_col = np.amin(data[column])\n",
+    "        max_col = np.amax(data[column])\n",
+    "        new_col = (data[column] - min_col)/(max_col - min_col)\n",
+    "        newDF = pd.concat([newDF, new_col], axis=1) \n",
+    "    \n",
+    "    data_normalized = newDF\n",
     "    return data_normalized\n",
-    "\n",
     "\n",
     "# perform data normalization\n",
     "data_normalized = data_normalization(data)\n",
+    "print (data_normalized.head())\n",
     "data_npr = data_normalized"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,13 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_mse(prediction, ground_truth):\n",
     "    # TODO: implement\n",
-    "    mse = None\n",
+    "    residual = ground_truth - prediction\n",
+    "    squared = residual**2\n",
+    "    sum_of_squared = np.sum(squared)\n",
+    "    mse = (1/ground_truth.size)*sum_of_squared\n",
     "    return mse"
    ]
   },
@@ -329,13 +409,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_prediction(X, W):\n",
     "    # TODO: implement\n",
-    "    Yhat = None\n",
+    "    Yhat = np.matmul(X, W)\n",
     "    return Yhat"
    ]
   },
@@ -349,13 +429,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_gradient(X, Y, Yhat, W, lambda_):\n",
     "    # TODO: implement\n",
-    "    gradient = None\n",
+    "    X_T = np.transpose(X)\n",
+    "    gradient = np.matmul(X_T,(np.matmul(X,W) - Y)) + lambda_W\n",
     "    return gradient"
    ]
   },
@@ -368,14 +449,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hint: avoid in-place modification\n",
     "def sgd(gradient, lr, cur_W):\n",
     "    # TODO: implement\n",
-    "    new_W = None\n",
+    "    new_W = cur_W - (lr * gradient)\n",
     "    return new_W"
    ]
   },
@@ -395,8 +476,24 @@
     "# concatenate X acc. to order of polynomial; likewise do it for W\n",
     "# where X is design matrix, W is the corresponding weight vector\n",
     "# [1 X X^2 X^3], [1 W1 W2 W3].T\n",
+    "\n",
+    "#this function is not done yet\n",
     "def prepare_data_matrix(X, W, order):\n",
     "    # TODO: implement\n",
+    "    \n",
+    "    \n",
+    "    for i in range(0, order):# for one attribute? \n",
+    "        if(i==0):\n",
+    "            X_mat = np.append(np.ones(X.size()), X, axis=1)\n",
+    "        else:\n",
+    "            X_mat = np.append(X_mat, X**(i))\n",
+    "    \n",
+    "    for i in range(0, order): \n",
+    "        if(i==0):\n",
+    "            X_mat = np.append(np.ones(W.size()), W, axis=1)\n",
+    "        else:\n",
+    "            X_mat = np.append(X_mat, X**(i))\n",
+    "    \n",
     "    X_mat = None\n",
     "    W_vec = None\n",
     "    return X_mat, W_vec"
@@ -646,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
